padding align fix

--- a/style.css
+++ b/style.css
@@ -13,5 +13,5 @@ body {
 background-color: #808080;
 }
 #align {
- padding:504px; 
+ padding-top:550px;  
 }
